--- a/src/app/Features/products/product-details/product-details.css
+++ b/src/app/Features/products/product-details/product-details.css
@@ -245,6 +245,7 @@ svg {
     .application-item, .why-choose-item {
         margin: 15px;
         padding: 15px;
+        height: fit-content;
     }
 
     .key-benefits h2, .applications h2, .why-choose h2 {
@@ -292,6 +293,7 @@ svg {
     .benefit-item, .application-item, .why-choose-item {
         margin: 10px;
         padding: 12px;
+        height: fit-content;
     }
 
     .key-benefits h2, .applications h2, .why-choose h2 {
@@ -471,22 +473,22 @@ svg {
     }
 
     .hero-section h1 {
-        font-size: 1.8rem;
+        font-size: 1.7rem;
     }
 
     .hero-section h2 {
-        font-size: 0.9rem;
+        font-size: 0.8rem;
         margin-bottom: 8px;
     }
 
     .hero-section p {
-        font-size: 0.8rem;
+        font-size: 0.7rem;
 
     }
 
     .hero-buttons .btn {
         padding: 6px 12px;
-        font-size: 0.75rem;
+        font-size: 0.7rem;
         margin: 3px;
     }
 
@@ -501,7 +503,7 @@ svg {
     }
 
     .contact-div p {
-        font-size: 0.8rem;
+        font-size: 0.7rem;
         margin: 5px;
     }
 
@@ -519,6 +521,7 @@ svg {
         margin: 0.75rem auto;
         padding: 10px;
         border-radius: 8px;
+        height: fit-content;
     }
 
     .application-item{
@@ -528,17 +531,24 @@ svg {
         width: 90%;
     }
 
+    .application-item h5{
+        font-size: 1rem;
+    }
+
+    .why-choose-item h5{
+        font-size: 1rem;
+    }
     .key-benefits h2, .applications h2, .why-choose h2 {
         font-size: 1.2rem;
     }
 
     .key-benefits p, .subtitle {
-        font-size: 0.8rem;
+        font-size: 0.7rem;
         margin-bottom: 15px;
     }
 
     .benefit-item h4 {
-        font-size: 1rem;
+        font-size: 0.9rem;
         margin-bottom: 10px;
     }
 
